--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Main</title>
         <link rel="icon" type="image/x-icon" href="../images/favicon3.ico">
-        <link rel="stylesheet" href="./style/style_main.css">
+        <link rel="stylesheet" href="./style_main.css">
 
     </head>
     <body id="main_page">
@@ -58,4 +58,5 @@
 
         </footer>
     </body>
+
 </html>
