--- a/thoughts.html
+++ b/thoughts.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thoughts</title>
         <link rel="icon" type="image/x-icon" href="../images/favicon3.ico">
-        <link rel="stylesheet" href="./style/style_main.css">
+        <link rel="stylesheet" href="./style_main.css">
         <script src="https://kit.fontawesome.com/dbf6eb29bd.js" crossorigin="anonymous"></script>
     </head>
     <body id="thoughts_b">
@@ -76,4 +76,5 @@
             <a href="./aboutme.html"><button class="all_buttons thoughts_click" onclick="alert('DO NOT GO ANY FURTHER! Don\'t click on the okay button on the bottom corner of this alert. Simply close this tab. Come back the next day and proceed to click the okay button then.')">Next Page</button></a> 
         </footer>
     </body>
+
 </html>
