--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Me</title>
         <link rel="icon" type="image/x-icon" href="../images/favicon3.ico">
-       <link rel="stylesheet" href="./style/style_main.css">
+       <link rel="stylesheet" href="./style_main.css">
     </head>
     <body class="aboutme_body">
         <main class="main_page">
@@ -109,3 +109,4 @@
         </footer>
     </body>
 </html>
+
