--- a/extra.html
+++ b/extra.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Extra</title>
         <link rel="icon" type="image/x-icon" href="../images/favicon3.ico">
-        <link rel="stylesheet" href="./style/style_main.css">
+        <link rel="stylesheet" href="./style_main.css">
         <script src="https://kit.fontawesome.com/dbf6eb29bd.js" crossorigin="anonymous"></script>
     </head>
     <body class="extra_body">
