--- a/note.html
+++ b/note.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Note</title>
         <link rel="icon" type="image/x-icon" href="../images/favicon3.ico">
-        <link rel="stylesheet" href="./style/style_main.css">
+        <link rel="stylesheet" href="./style_main.css">
         <script src="https://kit.fontawesome.com/dbf6eb29bd.js" crossorigin="anonymous"></script>
 
     </head>
@@ -51,16 +51,16 @@
         <hr>
         <div class="note_img_div">
         <div class="test_img">
-            <img src="../images/mu.jpg" alt="Mulholland Drive poster">
+            <img src="./images/mu.jpg" alt="Mulholland Drive poster">
         </div>
         <div class="test_img">
-            <img src="../images/kill_bill.jpeg" alt="Kill Bill poster">
+            <img src="./images/kill_bill.jpeg" alt="Kill Bill poster">
         </div>
         <div class="test_img">
-            <img src="../images/the_hunger_games.jpg" alt="The Hunger Games poster">
+            <img src="./images/the_hunger_games.jpg" alt="The Hunger Games poster">
         </div>
         <div class="test_img">
-            <img src="../images/balto._njpg.avif" alt="Balto poster">
+            <img src="./images/balto._njpg.avif" alt="Balto poster">
         </div>
         </div>
         <hr>
@@ -101,15 +101,15 @@
         <div class="music_div">
         <div class="music_div1">
             <ol class="note_ol">
-            <li><audio class="note_audio" controls src="../music/Boygenius_Cool_About_It.mp3" type="audio/mp3"></audio></li>
-            <li><audio class="note_audio" controls src="../music/Radiohead_Karma Police.mp3" type="audio/mp3"></audio></li>
-            <li><audio class="note_audio" controls src="../music/Xavibo - No todo se va.mp3" type="audio/mp3"></audio></li>
-            <li><audio class="note_audio" controls src="../music/Natalia Lacunza - Cuestión De Suerte.mp3" type="audio/mp3"></audio></li>
-            <li><audio class="note_audio" controls src="../music/Chappell Roan - After Midnight.mp3" type="audio/mp3"></audio></li>
+            <li><audio class="note_audio" controls src="./music/Boygenius_Cool_About_It.mp3" type="audio/mp3"></audio></li>
+            <li><audio class="note_audio" controls src="./music/Radiohead_Karma Police.mp3" type="audio/mp3"></audio></li>
+            <li><audio class="note_audio" controls src="./music/Xavibo - No todo se va.mp3" type="audio/mp3"></audio></li>
+            <li><audio class="note_audio" controls src="./music/Natalia Lacunza - Cuestión De Suerte.mp3" type="audio/mp3"></audio></li>
+            <li><audio class="note_audio" controls src="./music/Chappell Roan - After Midnight.mp3" type="audio/mp3"></audio></li>
             </ol>
         </div>
         <div>
-            <video src="../music/Alvaro_Diaz_SELEDA_720p.mp4" controls>Video not avaiable</video>
+            <video src="./music/Alvaro_Diaz_SELEDA_720p.mp4" controls>Video not avaiable</video>
         </div>
     </div>
     
